--- a/Profile/styles/name.css
+++ b/Profile/styles/name.css
@@ -99,13 +99,33 @@ a {
 	/* border: 5px solid rgb(105, 95, 95); */
 }
 
-@media screen and (max-width: 700px) {
+@media(max-width: 820px) {
+	.navigation-bar {
+		display: block;
+	}
+
+	.nav-item-container {
+		display: none;
+	}
+
 	.profile-section img {
 		display: block;
-		width: 30px;
-		height: 30px
+		width: 60px;
+		height: 80px
 	}
-}
+
+	.hobbie {}
+
+	.skills-container table {
+		display: inline-table;
+		letter-spacing: 4px;
+	}
+
+	.skills-container table td {
+		display: inline-flex;
+		line-height: 2;
+
+	}
 
 .education {
 	margin-top: 50px;
@@ -150,6 +170,11 @@ a {
 .hobbies-container h2 {
 	padding-bottom: 20px;
 }
+	
+.hobbie-list {
+	width: 100%;
+	height: auto;
+}	
 
 .hobbie-items {
 	margin-top: 5%;
