--- a/Profile/styles/name.css
+++ b/Profile/styles/name.css
@@ -7,7 +7,8 @@
 	margin: 0;
 	padding: 0;
 }
-html{
+
+html {
 	scroll-behavior: smooth;
 }
 
@@ -114,7 +115,6 @@ a {
 		height: 80px
 	}
 
-	.hobbie {}
 
 	.skills-container table {
 		display: inline-table;
@@ -126,142 +126,166 @@ a {
 		line-height: 2;
 
 	}
-}
 
-.education {
-	margin-top: 50px;
-	margin-bottom: 60px;
-}
+	.hobbie {}
 
-.education-container {
-	width: 50%;
-	margin-left: 5rem;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
 
-.education-container h2 {
-	padding-bottom: 20px;
-}
+	/* .skills-container {
+		display: flex;
+		flex-direction: column;
+	}
 
-#qual-hr {
-	width: 40%;
-	border-color: red;
-}
+	.skills-container table {
+		display: flex;
+		flex-direction: column;
 
-.marks-container {
-	margin-top: 5%;
-}
+	}
 
-.hobbie {
-	height: 50%;
-	margin-top: 50px;
-	margin-bottom: 60px;
-}
+	.achieve-container {
+		flex-wrap: wrap;
+		height: 100% !important;
+	} */
 
-.hobbies-container {
-	width: 50%;
-	margin-left: 5rem;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
 
-.hobbies-container h2 {
-	padding-bottom: 20px;
-}
-	
-.hobbie-list {
-	width: 100%;
-	height: auto;
-}	
+	.education {
+		margin-top: 50px;
+		margin-bottom: 60px;
+	}
 
-.hobbie-items {
-	margin-top: 5%;
-	padding: 10px 10px 0px 0px;
-}
+	.education-container {
+		width: 50%;
+		margin-left: 5rem;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
 
-.achievement {
-	height: 50%;
-	margin-top: 50px;
-	margin-bottom: 60px;
-}
+	.education-container h2 {
+		padding-bottom: 20px;
+	}
 
-.achieve-container {
-	width: 50%;
-	margin-left: 5rem;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
+	#qual-hr {
+		width: 40%;
+		border-color: red;
+	}
 
-.achieve-content h2 {
-	padding-bottom: 20px;
-}
+	.marks-container {
+		margin-top: 5%;
+	}
 
-.achieve-items {
-	margin-top: 3%;
-	padding: 10px 10px 0px 0px;
-	line-height: 2;
-}
+	.hobbie {
+		margin-top: 50px;
+		margin-bottom: 60px;
+	}
 
-#qual-hr1 {
-	width: 50%;
-	border-color: red;
-}
+	.hobbies-container {
+		width: 50%;
+		margin-left: 5rem;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
 
-.skills {
-	height: 50%;
-	margin-top: 50px;
-	margin-bottom: 60px;
-}
+	.hobbies-container h2 {
+		padding-bottom: 20px;
+	}
 
-.skills-container {
-	width: 50%;
-	margin-left: 5rem;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-}
+	.hobbie-list {
+		width: 100%;
+		height: auto;
+	}
 
-.skills-container h2 {
-	padding-bottom: 20px;
-}
+	.hobbie-items {
+		margin-top: 5%;
+		padding: 10px 10px 0px 0px;
+	}
 
-#qual-hr2 {
-	width: 20%;
-	border-color: red;
-}
+	.achievement {
+		/* width: 100%;
+	height: auto; */
+		margin-top: 50px;
+		margin-bottom: 60px;
+	}
 
-.skills-items {
-	margin-top: 3%;
-	padding: 10px 10px 0px 0px;
-}
+	.achieve-container {
+		width: 50%;
+		margin-left: 5rem;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
 
-/* For Footer ka section */
-.footer-section {
-	display: flex;
-	background-color: rgb(63, 55, 55);
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 25%;
-}
+	.achieve-content h2 {
+		padding-bottom: 20px;
+	}
 
-.footer-container {
-	color: white;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	line-height: 2;
-}
+	.achieve-items {
+		margin-top: 3%;
+		padding: 10px 10px 0px 0px;
+		line-height: 2;
+	}
 
-.social-icons {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	width: 30vh;
-	margin-bottom: 20px;
-}
+	#qual-hr1 {
+		width: 50%;
+		border-color: red;
+	}
+
+	.skills {
+		/* height: 50vh; */
+		margin-top: 50px;
+		margin-bottom: 60px;
+	}
+
+	.skills-container {
+		width: 50%;
+		margin-left: 5rem;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
+	.skills-container table {
+		width: 80%;
+		/* border-collapse: collapse; */
+	}
+
+	.skills-container h2 {
+		padding-bottom: 20px;
+	}
+
+	#qual-hr2 {
+		width: 20%;
+		border-color: red;
+	}
+
+	.skills-items {
+		margin-top: 3%;
+		padding: 10px 10px 0px 0px;
+	}
+
+	/* For Footer ka section */
+	.footer-section {
+		display: flex;
+		background-color: rgb(63, 55, 55);
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 25%;
+	}
+
+	.footer-container {
+		color: white;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		line-height: 2;
+	}
+
+	.social-icons {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		width: 30vh;
+		margin-bottom: 20px;
+	}
