--- a/Profile/styles/name.css
+++ b/Profile/styles/name.css
@@ -100,6 +100,17 @@ a {
 	/* border: 5px solid rgb(105, 95, 95); */
 }
 
+
+/* For Ipad devices */
+@media(max-width: 1150px) {
+	.profile-section img {
+		display: block;
+		width: 20vw;
+		height: 20vh;
+	}
+}
+
+/* For andriod tablets */
 @media(max-width: 820px) {
 	.navigation-bar {
 		display: block;
@@ -115,7 +126,6 @@ a {
 		height: 80px
 	}
 
-
 	.skills-container table {
 		display: inline-table;
 		letter-spacing: 4px;
@@ -126,167 +136,179 @@ a {
 		line-height: 2;
 
 	}
-
-	.hobbie {}
-
-
-	/* .skills-container {
-		display: flex;
-		flex-direction: column;
-	}
-
-	.skills-container table {
-		display: flex;
-		flex-direction: column;
-
-	}
-
-	.achieve-container {
-		flex-wrap: wrap;
-		height: 100% !important;
-	} */
 }
 
-
-	.education {
-		margin-top: 50px;
-		margin-bottom: 60px;
-	}
-
-	.education-container {
-		width: 50%;
-		margin-left: 5rem;
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-	}
-
-	.education-container h2 {
-		padding-bottom: 20px;
-	}
-
-	#qual-hr {
-		width: 40%;
-		border-color: red;
-	}
-
-	.marks-container {
-		margin-top: 5%;
-	}
-
-	.hobbie {
-		margin-top: 50px;
-		margin-bottom: 60px;
-	}
-
-	.hobbies-container {
-		width: 50%;
-		margin-left: 5rem;
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-	}
-
-	.hobbies-container h2 {
-		padding-bottom: 20px;
-	}
-
-	.hobbie-list {
-		width: 100%;
-		height: auto;
-	}
-
+/* For Mobile phone */
+@media(max-width:450px) {
 	.hobbie-items {
-		margin-top: 5%;
-		padding: 10px 10px 0px 0px;
+		font-size: 14px;
 	}
 
-	.achievement {
-		/* width: 100%;
-	height: auto; */
-		margin-top: 50px;
-		margin-bottom: 60px;
-	}
-
-	.achieve-container {
-		width: 50%;
-		margin-left: 5rem;
+	.achieve-content {
 		display: flex;
 		flex-direction: column;
 		flex-wrap: wrap;
-	}
-
-	.achieve-content h2 {
-		padding-bottom: 20px;
-	}
-
-	.achieve-items {
-		margin-top: 3%;
-		padding: 10px 10px 0px 0px;
-		line-height: 2;
+		justify-content: center;
+		text-align: justify;
 	}
 
 	#qual-hr1 {
-		width: 50%;
-		border-color: red;
-	}
-
-	.skills {
-		/* height: 50vh; */
-		margin-top: 50px;
-		margin-bottom: 60px;
-	}
-
-	.skills-container {
-		width: 50%;
-		margin-left: 5rem;
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-	}
-
-	.skills-container table {
-		width: 80%;
-		/* border-collapse: collapse; */
-	}
-
-	.skills-container h2 {
-		padding-bottom: 20px;
-	}
-
-	#qual-hr2 {
-		width: 20%;
-		border-color: red;
-	}
-
-	.skills-items {
-		margin-top: 3%;
-		padding: 10px 10px 0px 0px;
-	}
-
-	/* For Footer ka section */
-	.footer-section {
-		display: flex;
-		background-color: rgb(63, 55, 55);
-		justify-content: center;
-		align-items: center;
 		width: 100%;
-		height: 25%;
 	}
 
-	.footer-container {
-		color: white;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: center;
-		line-height: 2;
+	.achieve-content h2 {
+		font-size: 20px;
 	}
 
-	.social-icons {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		width: 30vh;
-		margin-bottom: 20px;
+}
+
+@media(max-width:320px) {
+	.achieve-content h2 {
+		font-size: 16px;
 	}
+}
+
+/* Responsive-ness upto 320px width. */
+/* --------responive ends--------- */
+.education {
+	margin-top: 50px;
+	margin-bottom: 60px;
+}
+
+.education-container {
+	width: 50%;
+	margin-left: 5rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.education-container h2 {
+	padding-bottom: 20px;
+}
+
+#qual-hr {
+	width: 40%;
+	border-color: red;
+}
+
+.marks-container {
+	margin-top: 5%;
+}
+
+.hobbie {
+	margin-top: 50px;
+	margin-bottom: 60px;
+}
+
+.hobbies-container {
+	width: 50%;
+	margin-left: 5rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.hobbies-container h2 {
+	padding-bottom: 20px;
+}
+
+.hobbie-list {
+	width: 100%;
+	height: auto;
+}
+
+.hobbie-items {
+	margin-top: 5%;
+	padding: 10px 10px 0px 0px;
+}
+
+.achievement {
+	/* width: 100%;
+height: auto; */
+	margin-top: 50px;
+	margin-bottom: 60px;
+}
+
+.achieve-container {
+	width: 50%;
+	margin-left: 5rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.achieve-content h2 {
+	padding-bottom: 20px;
+}
+
+.achieve-items {
+	margin-top: 3%;
+	padding: 10px 10px 0px 0px;
+	line-height: 2;
+}
+
+#qual-hr1 {
+	width: 50%;
+	border-color: red;
+}
+
+.skills {
+	/* height: 50vh; */
+	margin-top: 50px;
+	margin-bottom: 60px;
+}
+
+.skills-container {
+	width: 50%;
+	margin-left: 5rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+
+.skills-container table {
+	width: 80%;
+	/* border-collapse: collapse; */
+}
+
+.skills-container h2 {
+	padding-bottom: 20px;
+}
+
+#qual-hr2 {
+	width: 20%;
+	border-color: red;
+}
+
+.skills-items {
+	margin-top: 3%;
+	padding: 10px 10px 0px 0px;
+}
+
+/* For Footer ka section */
+.footer-section {
+	display: flex;
+	background-color: rgb(63, 55, 55);
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 25%;
+}
+
+.footer-container {
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	line-height: 2;
+}
+
+.social-icons {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 30vh;
+	margin-bottom: 20px;
+}
